add images and fill section portfolio with content

--- a/index.html
+++ b/index.html
@@ -114,12 +114,66 @@
       <section>
         <h2>Our Portfolio</h2>
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>
+            <img
+              src="./images./img-banking-app.jpg"
+              alt="image of Banking App"
+              height="300"
+              width="360"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images./img-cashless-payment.jpg"
+              alt="image of Cashless payment"
+              height="300"
+              width="360"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images./img-meditation-app.jpg"
+              alt="image of Meditation app"
+              height="300"
+              width="360"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images./img-taxi-service.jpg"
+              alt="image of Taxi service app"
+              height="300"
+              width="360"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images./img-screen-illustrations.jpg"
+              alt="image of Screen illustration"
+              height="300"
+              width="360"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images./img-online-courses.jpg"
+              alt="image of Online Courses"
+              height="300"
+              width="360"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
         </ul>
       </section>
     </main>
