--- a/index.html
+++ b/index.html
@@ -23,23 +23,29 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+        <a href="./index.html" class="logo-link">WebStudio</a>
+        <ul class="page-nav">
           <li>
-            <a href="#">Studio</a>
+            <a href="#" class="link-studio">Studio</a>
           </li>
           <li>
-            <a href="#">Portfolio</a>
+            <a href="#" class="link">Portfolio</a>
           </li>
           <li>
-            <a href="#">Contacts</a>
+            <a href="#" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11(000)111-11-11</a></li>
+        <ul class="contact-list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="contact"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="contact">+11(000)111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
@@ -50,7 +56,7 @@
       </section>
       <section>
         <h2>Advantages</h2>
-        <ul>
+        <ul class="section-list">
           <li>
             <h3>Strategy</h3>
             <p>
@@ -83,7 +89,7 @@
       </section>
       <section>
         <h2>Our Team</h2>
-        <ul>
+        <ul class="team-list">
           <li>
             <img
               src="./images./img-mg.jpg"
@@ -128,7 +134,7 @@
       </section>
       <section>
         <h2>Our Portfolio</h2>
-        <ul>
+        <ul class="portfolio-list">
           <li>
             <img
               src="./images./img-banking-app.jpg"
@@ -193,7 +199,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo-link">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
