--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button type="button" class="order-service">Order Service</button>
       </section>
       <section>
         <h2>Advantages</h2>
@@ -89,7 +89,7 @@
       </section>
       <section>
         <h2>Our Team</h2>
-        <ul class="team-list">
+        <ul class="dudes-list">
           <li>
             <img
               src="./images./img-mg.jpg"
@@ -134,7 +134,7 @@
       </section>
       <section>
         <h2>Our Portfolio</h2>
-        <ul class="portfolio-list">
+        <ul class="work-list">
           <li>
             <img
               src="./images./img-banking-app.jpg"
