--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo-link">WebStudio</a>
+        <a href="./index.html" class="logo-link"
+          >Web<span class="logo-link-second-part">Studio</span></a
+        >
         <ul class="page-nav">
           <li>
             <a href="#" class="link-studio">Studio</a>
@@ -50,36 +52,36 @@
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
+      <section class="main-page">
+        <h1 class="page-title">Effective Solutions for Your Business</h1>
         <button type="button" class="order-service">Order Service</button>
       </section>
       <section>
         <h2>Advantages</h2>
-        <ul class="section-list">
+        <ul class="advantages-list">
           <li>
-            <h3>Strategy</h3>
+            <h3 class="name-advantages">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="name-advantages">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="name-advantages">Diligence</h3>
             <p>
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="name-advantages">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -87,18 +89,18 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul class="dudes-list">
-          <li>
+      <section class="member">
+        <h2 class="member-title">Our Team</h2>
+        <ul class="member-list">
+          <li class="member-card">
             <img
               src="./images./img-mg.jpg"
               alt="photo of Mark Guerrero"
               height="260"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="member-name">Mark Guerrero</h3>
+            <p class="member-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -107,8 +109,8 @@
               height="260"
               width="264"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="member-name">Tom Ford</h3>
+            <p class="member-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -117,8 +119,8 @@
               height="260"
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="member-name">Camila Garcia</h3>
+            <p class="member-text">Marketing</p>
           </li>
           <li>
             <img
@@ -127,80 +129,82 @@
               height="260"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="member-name">Daniel Wilson</h3>
+            <p class="member-text">UI Designer</p>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Our Portfolio</h2>
-        <ul class="work-list">
-          <li>
+        <h2 class="example-title">Our Portfolio</h2>
+        <ul class="example-list">
+          <li class="example-card">
             <img
               src="./images./img-banking-app.jpg"
               alt="image of Banking App"
               height="300"
               width="360"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="example-name">Banking App</h3>
+            <p class="example-text">App</p>
           </li>
-          <li>
+          <li class="example-card">
             <img
               src="./images./img-cashless-payment.jpg"
               alt="image of Cashless payment"
               height="300"
               width="360"
             />
-            <h3>Cashless Payment</h3>
+            <h3 class="example-name">Cashless Payment</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="example-card">
             <img
               src="./images./img-meditation-app.jpg"
               alt="image of Meditation app"
               height="300"
               width="360"
             />
-            <h3>Meditation App</h3>
+            <h3 class="example-name">Meditation App</h3>
             <p>App</p>
           </li>
-          <li>
+          <li class="example-card">
             <img
               src="./images./img-taxi-service.jpg"
               alt="image of Taxi service app"
               height="300"
               width="360"
             />
-            <h3>Taxi Service</h3>
+            <h3 class="example-name">Taxi Service</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="example-card">
             <img
               src="./images./img-screen-illustrations.jpg"
               alt="image of Screen illustration"
               height="300"
               width="360"
             />
-            <h3>Screen Illustrations</h3>
+            <h3 class="example-name">Screen Illustrations</h3>
             <p>Design</p>
           </li>
-          <li>
+          <li class="example-card">
             <img
               src="./images./img-online-courses.jpg"
               alt="image of Online Courses"
               height="300"
               width="360"
             />
-            <h3>Online Courses</h3>
+            <h3 class="example-name">Online Courses</h3>
             <p>Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html" class="logo-link">WebStudio</a>
-      <p>
+    <footer class="bottom-page">
+      <a href="./index.html" class="logo-link"
+        >Web<span class="logo-link-second-part">Studio</span></a
+      >
+      <p class="bottom-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
