--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         >
         <ul class="page-nav">
           <li>
-            <a href="#" class="link-studio">Studio</a>
+            <a href="./index.html" class="link-studio">Studio</a>
           </li>
           <li>
-            <a href="#" class="link">Portfolio</a>
+            <a href="" class="link">Portfolio</a>
           </li>
           <li>
-            <a href="#" class="link">Contacts</a>
+            <a href="" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -57,7 +57,7 @@
         <button type="button" class="order-service">Order Service</button>
       </section>
       <section>
-        <h2>Advantages</h2>
+        <h2 hidden>Advantages</h2>
         <ul class="advantages-list">
           <li>
             <h3 class="name-advantages">Strategy</h3>
