fix mistakes in header

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <a href="./index.html" class="link-studio">Studio</a>
           </li>
           <li>
-            <a href="" class="link">Portfolio</a>
+            <a href="" class="link-works">Portfolio</a>
           </li>
           <li>
-            <a href="" class="link">Contacts</a>
+            <a href="" class="link-us">Contacts</a>
           </li>
         </ul>
       </nav>
