--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
         >
         <ul class="page-nav">
           <li>
-            <a href="./index.html" class="link-studio">Studio</a>
+            <a href="./index.html" class="link">Studio</a>
           </li>
           <li>
-            <a href="" class="link-works">Portfolio</a>
+            <a href="" class="link">Portfolio</a>
           </li>
           <li>
-            <a href="" class="link-us">Contacts</a>
+            <a href="" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="contact-list">
         <ul class="contact-list">
           <li>
             <a href="mailto:info@devstudio.com" class="contact"
