--- a/index.html
+++ b/index.html
@@ -61,28 +61,28 @@
         <ul class="advantages-list">
           <li>
             <h3 class="name-advantages">Strategy</h3>
-            <p>
+            <p class="explain-advantages">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3 class="name-advantages">Punctuality</h3>
-            <p>
+            <p class="explain-advantages">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3 class="name-advantages">Diligence</h3>
-            <p>
+            <p class="explain-advantages">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="name-advantages">Technologies</h3>
-            <p>
+            <p class="explain-advantages">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
