fix mistakes in third section

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <h3 class="member-name">Mark Guerrero</h3>
             <p class="member-text">Product Designer</p>
           </li>
-          <li>
+          <li class="member-card">
             <img
               src="./images./img-tf.jpg"
               alt="photo of Tom Ford"
@@ -112,7 +112,7 @@
             <h3 class="member-name">Tom Ford</h3>
             <p class="member-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="member-card">
             <img
               src="./images./img-cg.jpg"
               alt="photo of Camila Garcia"
@@ -122,7 +122,7 @@
             <h3 class="member-name">Camila Garcia</h3>
             <p class="member-text">Marketing</p>
           </li>
-          <li>
+          <li class="member-card">
             <img
               src="./images./img-dw.jpg"
               alt="photo of Daniel Wilson"
