fix mistakes in fourth section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <ul class="member-list">
           <li class="member-card">
             <img
-              src="./images./img-mg.jpg"
+              src="./images/img-mg.jpg"
               alt="photo of Mark Guerrero"
               height="260"
               width="264"
@@ -104,7 +104,7 @@
           </li>
           <li class="member-card">
             <img
-              src="./images./img-tf.jpg"
+              src="./images/img-tf.jpg"
               alt="photo of Tom Ford"
               height="260"
               width="264"
@@ -114,7 +114,7 @@
           </li>
           <li class="member-card">
             <img
-              src="./images./img-cg.jpg"
+              src="./images/img-cg.jpg"
               alt="photo of Camila Garcia"
               height="260"
               width="264"
@@ -124,7 +124,7 @@
           </li>
           <li class="member-card">
             <img
-              src="./images./img-dw.jpg"
+              src="./images/img-dw.jpg"
               alt="photo of Daniel Wilson"
               height="260"
               width="264"
@@ -139,7 +139,7 @@
         <ul class="example-list">
           <li class="example-card">
             <img
-              src="./images./img-banking-app.jpg"
+              src="./images/img-banking-app.jpg"
               alt="image of Banking App"
               height="300"
               width="360"
@@ -149,37 +149,37 @@
           </li>
           <li class="example-card">
             <img
-              src="./images./img-cashless-payment.jpg"
+              src="./images/img-cashless-payment.jpg"
               alt="image of Cashless payment"
               height="300"
               width="360"
             />
             <h3 class="example-name">Cashless Payment</h3>
-            <p>Marketing</p>
+            <p class="example-text">Marketing</p>
           </li>
           <li class="example-card">
             <img
-              src="./images./img-meditation-app.jpg"
+              src="./images/img-meditation-app.jpg"
               alt="image of Meditation app"
               height="300"
               width="360"
             />
             <h3 class="example-name">Meditation App</h3>
-            <p>App</p>
+            <p class="example-text">App</p>
           </li>
           <li class="example-card">
             <img
-              src="./images./img-taxi-service.jpg"
+              src="./images/img-taxi-service.jpg"
               alt="image of Taxi service app"
               height="300"
               width="360"
             />
             <h3 class="example-name">Taxi Service</h3>
-            <p>Marketing</p>
+            <p class="example-text">Marketing</p>
           </li>
           <li class="example-card">
             <img
-              src="./images./img-screen-illustrations.jpg"
+              src="./images/img-screen-illustrations.jpg"
               alt="image of Screen illustration"
               height="300"
               width="360"
@@ -189,7 +189,7 @@
           </li>
           <li class="example-card">
             <img
-              src="./images./img-online-courses.jpg"
+              src="./images/img-online-courses.jpg"
               alt="image of Online Courses"
               height="300"
               width="360"
