fix mistakes in fourth section and in footer

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
               width="360"
             />
             <h3 class="example-name">Screen Illustrations</h3>
-            <p>Design</p>
+            <p class="example-text">Design</p>
           </li>
           <li class="example-card">
             <img
@@ -195,7 +195,7 @@
               width="360"
             />
             <h3 class="example-name">Online Courses</h3>
-            <p>Marketing</p>
+            <p class="example-text">Marketing</p>
           </li>
         </ul>
       </section>
